--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -7,6 +7,13 @@
     "express": "4.18.1"
   },
   "scripts": {
-    "dev": "node app.js"
+    "dev": "ts-node src/index.ts",
+    "build": "rm -rf dist && tsc"
+  },
+  "devDependencies": {
+    "@types/express": "4.17.14",
+    "@types/node": "18.7.19",
+    "ts-node": "10.9.1",
+    "typescript": "4.8.3"
   }
 }
