--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -8,11 +8,15 @@
   },
   "scripts": {
     "dev": "ts-node src/index.ts",
-    "build": "rm -rf dist && tsc"
+    "build": "rm -rf dist && tsc",
+    "lint": "eslint src/**/*.ts"
   },
   "devDependencies": {
+    "@monorepo-test/eslint-config": "*",
     "@types/express": "4.17.14",
     "@types/node": "18.7.19",
+    "@typescript-eslint/eslint-plugin": "5.38.0",
+    "@typescript-eslint/parser": "5.38.0",
     "ts-node": "10.9.1",
     "typescript": "4.8.3"
   }
